# numd

numd/: .metadata  README.md  ffigen.yaml  pubspec.yaml
numd/android/app/: build.gradle
numd/android/app/src/main/: AndroidManifest.xml
numd/android/app/src/main/kotlin/com/example/numd/: MainActivity.kt
numd/clib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libxtensor_dart_ffi.so.1  xarray.cpp  xarray.def  xarray.h
numd/example/: README.md  pubspec.yaml
numd/example/lib/: main.dart
numd/example/linux/: CMakeLists.txt  my_application.cc
numd/example/linux/flutter/: generated_plugins.cmake
numd/example/linux/flutter/ephemeral/: generated_config.cmake
numd/example/linux/flutter/ephemeral/.plugin_symlinks/: numd
numd/example/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
numd/example/macos/Runner.xcodeproj/: project.pbxproj
numd/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
numd/example/macos/Runner/Configs/: AppInfo.xcconfig
numd/example/windows/: CMakeLists.txt
numd/example/windows/flutter/: generated_plugins.cmake
numd/example/windows/runner/: Runner.rc  main.cpp
numd/ios/Runner/: Info.plist
numd/ios/Runner.xcodeproj/: project.pbxproj
numd/lib/: main.dart  numd.dart  statistics.dart  view_flat.dart  views.dart
numd/lib/src/: array_generators.dart
numd/lib/src old/base/: ndarray.dart  view.dart  view_flat.dart
numd/lib/src old/statistics/: average.dart  min_max.dart  normalize.dart
numd/lib/src/base/: ndarray.dart  ndarray_flat.dart  view.dart  view_flat.dart
numd/lib/src/bindings/: numd_bindings.dart  numd_dynamic_lib.dart  xtensor_bindings.dart  xtensor_expressions_bindings.dart  xtensor_ndarray_bindings.dart
numd/lib/src/expressions/: fft.dart  histogram.dart  rearrange.dart  reductions.dart
numd/lib/src/statistics/: average.dart
numd/lib/src/utility/: iterators.dart  math.dart
numd/linux/: CMakeLists.txt  my_application.cc
numd/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
numd/macos/: numd.podspec
numd/macos/Classes/: numd.c  numd.cpp
numd/macos/Runner.xcodeproj/: project.pbxproj
numd/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
numd/macos/Runner/Configs/: AppInfo.xcconfig
numd/macos/resources/: libnumd.dylib
numd/src/: CMakeLists.txt  numd.cpp  numd.h
numd/src/c_lib/fftw/3.5.5/lib/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp
numd/src/c_lib/xtensor/0.24.6/share/cmake/xtensor/: xtensorTargets.cmake
numd/src/c_lib/xtensor/0.24.6/share/pkgconfig/: xtensor.pc
numd/src/c_lib/xtl/0.7.4/share/pkgconfig/: xtl.pc
numd/test/: numd_test.dart  widget_test.dart
numd/web/: index.html  manifest.json
numd/windows/: CMakeLists.txt
numd/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
numd/windows/runner/: Runner.rc  main.cpp
numd_c_libs/: .metadata  README.md  pubspec.yaml
numd_c_libs/lib/: numd_c_libs.dart  numd_c_libs_method_channel.dart  numd_c_libs_platform_interface.dart
numd_c_libs/linux/: CMakeLists.txt
numd_c_libs/macos/numd/numd.xcodeproj/xcshareddata/xcschemes/: numd.xcscheme
numd_c_libs/macos/numd_pot/: numd.podspec
numd_c_libs/macos/numd_pot/numd.framework/: numd
numd_c_libs/macos/numd_pot/numd.framework.dSYM/Contents/: Info.plist
numd_c_libs/macos/numd_pot/numd.framework.dSYM/Contents/Resources/DWARF/: numd
numd_c_libs/macos/numd_pot/numd.framework.dSYM/Contents/Resources/Relocations/aarch64/: numd.yml
numd_c_libs/macos/numd_pot/numd.framework/Versions/A/: numd
numd_c_libs/macos/numd_pot/numd.framework/Versions/A/Headers/: numd.h  numd_functions.h
numd_c_libs/macos/numd_pot/numd.framework/Versions/A/Modules/: module.modulemap
numd_c_libs/macos/numd_pot/numd.framework/Versions/A/Resources/: Info.plist
numd_c_libs/macos/numd_pot/numd.framework/Versions/A/_CodeSignature/: CodeResources
numd_c_libs/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libnumd.dylib  numd.cpp  numd.h  test.cpp  test.h
numd_c_libs/src/c_lib/fftw/3.5.5/lib/: libfftw3f-3.lib
numd_c_libs/test/: numd_c_libs_method_channel_test.dart  numd_c_libs_test.dart
numd_c_libs/windows/: CMakeLists.txt
